packages/react-components/src/components/drawer/drawer.module.css
@import '../../core/utils/media.css';
@import '../../core/utils/vibrancy.css';

@layer components {
  .Drawer {
    display: contents;
  }

  .Container {
    position: absolute;
    display: grid;
    inset: 0;
    pointer-events: none;
    align-items: stretch;

    &[data-drawer-side='right'] {
      justify-content: flex-end;
    }

    &[data-drawer-side='left'] {
      justify-content: flex-start;
    }

    & > * {
      pointer-events: auto;
    }
  }

  .Content {

    @mixin vibrancy;

    background-color: var(--vibrancy-background-soft);
    inline-size: 100vw;
    padding-bottom: env(safe-area-inset-bottom);
    max-inline-size: var(--max-w);
    height: 100dvh;
    outline: 1px solid var(--global-outer-contrast-border);


    .Container[data-drawer-side='right'] & {
      border-left: 1px solid var(--global-inner-contrast-border);
    }

    .Container[data-drawer-side='left'] & {
      border-right: 1px solid var(--global-inner-contrast-border);
    }
  }

  .Scroller {
    -webkit-overflow-scrolling: touch;
    overscroll-behavior: contain;
    overflow: auto;
  }

  .Header {
    border-bottom: 1px solid var(--vibrancy-background-mid);
    padding:
      calc(env(safe-area-inset-top) + token(--space-16))
      calc(env(safe-area-inset-right) + token(--space-16))
      calc(env(safe-area-inset-bottom) + token(--space-16))
      calc(env(safe-area-inset-left) + token(--space-24));
  }
}
@layer overrides {
  .CloseButton {
    flex-grow: 0;
  }
}

